--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-
+<h3 class="heading">let's play etch a sketch</h3>
   <button class="button" type="button" name="button">we move</button>
   <div class="containerDiv">
 
