--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
 
 <body>
+  <h3 class="heading">let's play etch a sketch</h3>
 
-<h3 class="heading">let's play etch a sketch</h3>
-  <button class="button" type="button" name="button">we move</button>
+  <button class="colorbutton" type="button" name="button">||</button>
+
+  <button class="button mainbtn" type="button" name="button">we move</button>
+
   <div class="containerDiv">
 
   </div>
